argocd-mgc/setlistclub-front-mgc-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: setlistclub-front-svc
spec:
  type: ClusterIP
  selector:
    app: setlistclub-front
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
      name: http
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: setlistclub-front-http
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: "web"
spec:
  rules:
    - host: setlistclub-front.201.23.17.249.sslip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: setlistclub-front-svc
                port:
                  number: 80
    - host: setlistclub.beloni.dev.br
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: setlistclub-front-svc
                port:
                  number: 80
